--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
+    "react-datepicker": "^4.14.1",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "tailwindcss": "3.3.2"
   }
 }
